<resources>
  <string name="app_name">Rock</string>
  <string name="search_hint">Search or enter URL</string>
  <string name="go">Go</string>
  <string name="back">Back</string>
  <string name="forward">Forward</string>
  <string name="reload">Reload</string>
  <string name="settings">Settings</string>
  <string name="settings_title">Settings</string>
  <string name="language">Language</string>
  <string name="english">English</string>
  <string name="arabic">Arabic</string>
  <string name="download_segments">Download Segments</string>
  <string name="save">Save</string>
  <string name="downloading">Downloading…</string>
  <string name="download_complete">Download complete</string>
  <string name="invalid_url">Invalid URL</string>
  <string name="home_page">Home page</string>
  <string name="home_page_hint">https://example.com or leave empty</string>
  <string name="search_engine">Search engine</string>
  <string name="background_url">Background image URL</string>
  <string name="background_url_hint">https://... (jpg/png)</string>
  <string name="history">History</string>
  <string name="home">Home</string>
  <string name="clear_history">Clear history</string>
</resources>
